--- a/src/populator/Dockerfile
+++ b/src/populator/Dockerfile
@@ -1,14 +1,15 @@
 FROM golang:latest as builder
 
+RUN mkdir /app
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN go build -o populator .
+RUN CGO_ENABLED=0 GOOS=linux go build -installsuffix cgo -o populator .
 
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
-WORKDIR /root/
-COPY --from=builder /app/populator .
-CMD ["./populator"]
+RUN mkdir /app
+COPY --from=builder /app/populator /app/
+WORKDIR /app/
