Made number of records configurable in docker-compose

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     depends_on:
       - mysql
     command: "./populator"
+    environment:
+      WORKERS: "20"
+      NUMBER_OF_RECORDS: "10000000"
 
 volumes:
   data:
